samples/_failures_safe/1761346900_5967e6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bda4a176.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_bda4a176.c:163:5: error: expected expression at end of input
  163 |     while (q.front != NULL)
      |     ^~~~~
./samples/SAFE/__tmp_bda4a176.c:163:5: error: expected declaration or statement at end of input
